[package]
name = "magnetite_lib"
version = "0.0.1"
authors = ["Elizabeth Marston <liz.mars@pm.me>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.69"
js-sys = "0.3.46"

[dependencies.web-sys]
version = "0.3.46"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "Headers",
  "HtmlCanvasElement",
  "HtmlElement",
  "Node",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]
